force-app/main/default/objects/Request_Leave__c/Request_Leave__c.object-meta.xml
<CustomObject>
    <description>digunakan jika agent ingin melakukan cuti dan request off</description>
    <label>Request Cuti &amp; Off</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Cuti &amp; Off</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>