force-app/main/default/objects/Request_Leave__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submit for Approval</fullName>
            </value>
            <value>
                <fullName>Approve by Manager</fullName>
            </value>
            <value>
                <fullName>Reject by Manager</fullName>
            </value>
            <value>
                <fullName>Approve by SPV</fullName>
            </value>
            <value>
                <fullName>Reject by SPV</fullName>
            </value>
            <value>
                <fullName>Approve by Asisten Manager</fullName>
            </value>
            <value>
                <fullName>Reject by Asisten Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>