force-app/main/default/objects/Request_Leave__c/fields/Assistant_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assistant Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.User_Level__c</field>
            <operation>equals</operation>
            <value>Assistant Manager</value>
        </filterItems>
        <filterItems>
            <field>User.SITE_CCT__c</field>
            <operation>equals</operation>
            <valueField>$User.SITE_CCT__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Request_Cuti2</relationshipName>
    <type>Lookup</type>
</CustomField>