force-app/main/default/objects/Request_Leave__c/fields/Hari_Tahun_Depan__c.field-meta.xml
<CustomField>
    <fullName>Hari_Tahun_Depan__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Hari Tahun Depan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>