force-app/main/default/objects/Request_Leave__c/fields/Nama_Karyawan__c.field-meta.xml
<CustomField>
    <fullName>Nama_Karyawan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nama Karyawan</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Request_Leave</relationshipName>
    <type>Lookup</type>
</CustomField>