force-app/main/default/objects/Request_Leave__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_Request__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cuti Tahunan</fullName>
            </value>
            <value>
                <fullName>Kuliah</fullName>
            </value>
            <value>
                <fullName>Hamil</fullName>
            </value>
            <value>
                <fullName>Pribadi/Keluarga</fullName>
            </value>
            <value>
                <fullName>Dalam Perhatian Khusus</fullName>
            </value>
            <value>
                <fullName>Lain - Lain</fullName>
            </value>
            <value>
                <fullName>Cuti Duka</fullName>
                <isActive>false</isActive>
                <label>Cuti Duka</label>
            </value>
            <value>
                <fullName>Cuti Menikah</fullName>
                <isActive>false</isActive>
                <label>Cuti Menikah</label>
            </value>
            <value>
                <fullName>Cuti Tanpa Tanggungan</fullName>
                <isActive>false</isActive>
                <label>Cuti Tanpa Tanggungan</label>
            </value>
            <value>
                <fullName>Istri Melahirkan</fullName>
                <isActive>false</isActive>
                <label>Istri Melahirkan</label>
            </value>
            <value>
                <fullName>Keguguran</fullName>
                <isActive>false</isActive>
                <label>Keguguran</label>
            </value>
            <value>
                <fullName>Liburan</fullName>
                <isActive>false</isActive>
                <label>Liburan</label>
            </value>
            <value>
                <fullName>Menunaikan Ibadah Haji</fullName>
                <isActive>false</isActive>
                <label>Menunaikan Ibadah Haji</label>
            </value>
            <value>
                <fullName>Menunaikan Umroh</fullName>
                <isActive>false</isActive>
                <label>Menunaikan Umroh</label>
            </value>
            <value>
                <fullName>Pengkhitanan / Baptis Anak</fullName>
                <isActive>false</isActive>
                <label>Pengkhitanan / Baptis Anak</label>
            </value>
            <value>
                <fullName>Persekot Cuti</fullName>
                <isActive>false</isActive>
                <label>Persekot Cuti</label>
            </value>
            <value>
                <fullName>Pulang Kampung</fullName>
                <isActive>false</isActive>
                <label>Pulang Kampung</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>