force-app/main/default/objects/Request_Leave__c/fields/SPV__c.field-meta.xml
<CustomField>
    <fullName>SPV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPV</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.Agent_Type__c</field>
            <operation>equals</operation>
            <valueField>User.Agent_Type__c</valueField>
        </filterItems>
        <filterItems>
            <field>User.User_Level__c</field>
            <operation>equals</operation>
            <value>SPV</value>
        </filterItems>
        <filterItems>
            <field>User.SITE_CCT__c</field>
            <operation>equals</operation>
            <valueField>$User.SITE_CCT__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Request_Cuti1</relationshipName>
    <type>Lookup</type>
</CustomField>