force-app/main/default/objects/Request_Leave__c/fields/Type_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_Request__c</fullName>
    <label>Type Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Cuti</fullName>
                <default>true</default>
                <label>Request Cuti</label>
            </value>
            <value>
                <fullName>Request Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>