force-app/main/default/objects/Request_Leave__c/validationRules/ValidateDateFrom.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateDateFrom</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(ISNEW(),Date_From__c &lt;= TODAY()), AND(!ISNEW(),Date_From__c &lt;= DATEVALUE( CreatedDate ) ))</errorConditionFormula>
    <errorDisplayField>Date_From__c</errorDisplayField>
    <errorMessage>&quot;Date From&quot; tidak boleh lebih dari hari ini</errorMessage>
</ValidationRule>