force-app/main/default/objects/Request_Leave__c/validationRules/ValidateDateTo.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateDateTo</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(ISNEW(),Date_To__c &lt;= TODAY()), AND(!ISNEW(),Date_To__c &lt;= DATEVALUE( CreatedDate ) ))</errorConditionFormula>
    <errorDisplayField>Date_To__c</errorDisplayField>
    <errorMessage>&quot;Date To&quot; tidak boleh lebih dari hari ini</errorMessage>
</ValidationRule>