force-app/main/default/objects/Request_Leave__c/validationRules/ValidateDateTo2.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateDateTo2</fullName>
    <active>true</active>
    <errorConditionFormula>Date_To__c &lt;  Date_From__c</errorConditionFormula>
    <errorDisplayField>Date_To__c</errorDisplayField>
    <errorMessage>&quot;Date To&quot; tidak boleh lebih kecil dari &quot;Date From&quot;</errorMessage>
</ValidationRule>