force-app/main/default/objects/Request_Leave__c/validationRules/ValidateHariCuti.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateHariCuti</fullName>
    <active>true</active>
    <errorConditionFormula>(Hari_Tahun_Depan__c +  Hari_Tahun_Ini__c) &gt; 8</errorConditionFormula>
    <errorMessage>Tanggal cuti tidak boleh lebih dari 8 hari</errorMessage>
</ValidationRule>