force-app/main/default/objects/Request_Leave__c/validationRules/ValidateThisYear.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateThisYear</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(
        ISNEW(), 
        YEAR(Date_From__c) &lt;&gt; YEAR(TODAY())
    ), 
    AND(
        NOT(ISNEW()), 
        YEAR(Date_From__c) &lt;&gt; YEAR(DATEVALUE(CreatedDate))
    )
)</errorConditionFormula>
    <errorDisplayField>Date_From__c</errorDisplayField>
    <errorMessage>&quot;Date From&quot; tidak boleh lebih dari TAHUN INI</errorMessage>
</ValidationRule>