force-app/main/default/objects/Request_Leave__c/validationRules/Validation_Max_Request_15.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Max_Request_15</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),OR(DAY(DATEVALUE(CreatedDate))&gt;15, DAY(TODAY())&gt;15), TEXT( Type_Request__c )==&apos;Request Cuti&apos; )</errorConditionFormula>
    <errorMessage>Request Cuti hanya dapat dilakukan tanggal 1-15</errorMessage>
</ValidationRule>