force-app/main/default/objects/Request_Leave__c/listViews/Agent_Leader_WFM_Request_Leave.listView-meta.xml
<ListView>
    <fullName>Agent_Leader_WFM_Request_Leave</fullName>
    <filterScope>Queue</filterScope>
    <label>WFM - Agent Leader</label>
    <queue>Agent_Leader_WFM</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>