force-app/main/default/objects/Request_Leave__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nama_Karyawan__c</columns>
    <columns>Type_Request__c</columns>
    <columns>Reason__c</columns>
    <columns>Date_From__c</columns>
    <columns>Date_To__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>