force-app/main/default/objects/Request_Leave__c/listViews/Approval_Asisten_Manager.listView-meta.xml
<ListView>
    <fullName>Approval_Asisten_Manager</fullName>
    <columns>NAME</columns>
    <columns>Nama_Karyawan__c</columns>
    <columns>Type_Request__c</columns>
    <columns>Reason__c</columns>
    <columns>Date_From__c</columns>
    <columns>Date_To__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assistant_Manager__c</field>
        <operation>equals</operation>
        <value>$USER</value>
    </filters>
    <label>Approval - Asisten Manager</label>
</ListView>