force-app/main/default/objects/Request_Leave__c/listViews/My_Request_Cuti.listView-meta.xml
<ListView>
    <fullName>My_Request_Cuti</fullName>
    <columns>NAME</columns>
    <columns>Nama_Karyawan__c</columns>
    <columns>Type_Request__c</columns>
    <columns>Reason__c</columns>
    <columns>Date_From__c</columns>
    <columns>Date_To__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type_Request__c</field>
        <operation>equals</operation>
        <value>Request Cuti</value>
    </filters>
    <label>My History - Request Cuti</label>
</ListView>